[tool.poetry]
name = "funpymodeling"
version = "0.1.3"
description = "A package designed for data scientists and teachers, to speed up their ML projects, focused on exploratory data analysis, data preparation, and model performance."
license="MIT"
authors = ["Pablo Casas <pcasas.biz@gmail.com>"]
readme = "README.md"
repository = "https://github.com/pablo14/funPyModeling"
documentation = "https://github.com/pablo14/funPyModeling"

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.1.0"
numpy = "^1.19.1"
matplotlib = "^3.3.0"
sklearn = "^0.0"
seaborn = "^0.10.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
