[tool.poetry]
name = "funpymodeling"
version = "0.1.7"
description = "A package designed for data scientists and teachers, to speed up their ML projects, focused on exploratory data analysis, data preparation, and model performance."
license="MIT"
authors = ["Pablo Casas <pcasas.biz@gmail.com>"]
readme = "README.md"
repository = "https://github.com/pablo14/funPyModeling"
documentation = "https://github.com/pablo14/funPyModeling"

[tool.poetry.dependencies]
python = "^3.6.1"
pandas = "^1.0.5"
numpy = "^1.18.5"
matplotlib = "^3.2.2"
typing-extensions = { version = "^3.7.4", python = "<3.8" }
sklearn = "^0.0"
seaborn = "^0.10.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.1"
jupyter = "^1.0.0"
pre-commit = "^2.4.0"
pytest = "^5.4.2"
coveralls = "^2.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
