[tool.poetry]
name = "funpymodeling"
version = "0.2.3"
description = "A package designed for data scientists and teachers, to speed up their ML projects, focused on exploratory data analysis, data preparation, and model performance."
license="MIT"
authors = ["Pablo Casas <pcasas.biz@gmail.com>"]
readme = "README.md"
repository = "https://github.com/pablo14/funPyModeling"
documentation = "https://github.com/pablo14/funPyModeling"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
pandas = "^2.0.2"
numpy = "^1.24.3"
matplotlib = "^3.7.1"
typing-extensions = "^4.6.3"
scikit-learn = "^1.2.2"
seaborn = "^0.12.2"
scipy = "^1.10.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
jupyter = "^1.0.0"
pre-commit = "^3.3.2"
pytest = "^7.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
